--- a/index.html
+++ b/index.html
@@ -1,14 +1,22 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Ejercicio Buscaminas</title>
   </head>
   <body>
-    <h1>Esto es una prueba</h1>
-    
+    <h1>BUSCAMINAS</h1>
+
+    <div class="tablero">
+      <div class="encabezado">
+        <p id="banderas"></p>
+        <p id="timer"></p>
+      </div>
+      <div id="juego"></div>
+    </div>
+
     <script type="module" src="src/main.js"></script>
   </body>
 </html>
