--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
   <body>
     <h1>BUSCAMINAS</h1>
 
-    <div class="tablero">
-      <div class="encabezado">
-        <p id="banderas"></p>
+    <div class="board">
+      <div class="header">
+        <p id="flag"></p>
         <p id="timer"></p>
       </div>
-      <div id="juego"></div>
+      <div id="game"></div>
     </div>
 
     <script type="module" src="src/main.js"></script>
