buscaminas logica completado

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
     <div class="board">
       <div class="header">
-        <p id="flag"></p>
-        <p id="timer"></p>
+        <button id="reset">Reset</button>
+        <p id="container__timer">Time:<span id="timer">00:00:00</span></p>
       </div>
       <div id="game"></div>
     </div>
